--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,14 +33,14 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/media/rail.jpg" alt="First slide">
+        <img class="d-block w-100" src="{{ MEDIA_URL }}rail.jpg" alt="First slide">
         <div class="carousel-caption">
             <h5> Update Your Skateboarding Equipment<span class="dot">.</span></h5>
             <p>...</p>
           </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/media/board.jpg" alt="Second slide">
+        <img class="d-block w-100" src="{{ MEDIA_URL }}board.jpg" alt="Second slide">
         <div class="carousel-caption">
             <h5>...</h5>
             <p>...</p>
