--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background-color: green;
+    background-color: rgb(29, 29, 29);
     min-height: 100vh;
     padding: 0;
     margin: 0;
@@ -27,7 +27,6 @@ footer {
 .uppercase {
     text-transform: uppercase;
 }
-
 
 /* ---------------------- NAVBAR ---------------------- */
 
