Added wishlist app & views

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -114,13 +114,13 @@
                     </tr>
                     <tr>
                         <td colspan="5" class="text-right">
-                            <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">
+                            <a href="{% url 'products' %}" class="shop-now-button btn btn-md rounded-0 text-uppercase">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <a href="{% url 'checkout' %}" class="add-button btn btn-lg rounded-4 text-uppercase py-3">
+                            <a href="{% url 'checkout' %}" class="add-button btn btn-lm rounded-0 text-uppercase">
                                 <span class="text-uppercase">Secure Checkout</span>
                                 <span class="icon">
                                     <i class="fas fa-lock"></i>
