--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -112,13 +112,13 @@
                 </fieldset>
 
                 <div class="submit-button text-right mt-5 mb-2">                    
-                    <a href="{% url 'view_bag' %}" class="shop-now-button btn btn-sm rounded-4 text-uppercase py-3 text-white">
+                    <a href="{% url 'view_bag' %}" class="shop-now-button btn btn-md rounded-0 text-uppercase">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
                         <span class="font-weight-bold">Adjust Bag</span>
                     </a>
-                    <button id="submit-button" class="add-button btn btn-sm rounded-4 text-uppercase py-3">
+                    <button id="submit-button" class="add-button btn btn-md rounded-0 text-uppercase">
                         <span class="font-weight-bold">Complete Order</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
