--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,11 +33,26 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
-                {% if product.category %}
-                    <a class="text-black" href="{% url 'products' %}?category={{ product.category.name }}">
-                        {{ product.category.friendly_name }}
-                    </a>
-                {% endif %}
+                <div class="row">
+                    <div class="col-12 d-flex justify-content-between">
+                        <!-- CURRENT CATEGORY -->
+                        {% if product.category %}
+                            <a class="text-black" href="{% url 'products' %}?category={{ product.category.name }}">
+                                {{ product.category.friendly_name }}
+                            </a>
+                        {% endif %}
+                        <!-- WISHLIST -->
+                        {% if user.is_authenticated %}
+                        <form class="form" method="POST" action="">
+                            {% csrf_token %}
+                            <button class="border-0 add-wishlist" id="add-wishlist-btn" type="submit" name="action">
+                                <i class="far fa-heart"></i>
+                            </button>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </form>
+                        {% endif %}
+                    </div>
+                </div>
                 <!-- PRODUCT NAME & PRICE -->
                 <h1 class="mb-0 uppercase">{{ product.name }}</h1>
                 <p class="mb-0 text-left price">${{ product.price }}</p>
