--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background-color: orangered;
+    background-color: #fff;
     min-height: 100vh;
     padding: 0;
     margin: 0;
@@ -173,6 +173,11 @@ li.nav-item {
     text-align: end;
     text-transform: capitalize;
 } 
+
+.wishlist-container {
+    min-height: 70vh;
+    margin-top: 10rem;
+}
 
 .shopping-bag-continer,
 .details-container  {
@@ -591,6 +596,15 @@ input[type=number] {
     min-width: 180px;
     font-weight: 700;
     border: 3px solid #764c87;
+}
+
+.add-wishlist {
+    background-color: inherit;
+}
+
+.add-wishlist i {
+    font-size: 1.5rem;
+    text-align: right;
 }
 
 /* ---------------------- HOVER ---------------------- */
