--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background-color: #fff;
+    background-color: #ffffff;
     min-height: 100vh;
     padding: 0;
     margin: 0;
