added contact app, template and view

--- a/templates/base.html
+++ b/templates/base.html
@@ -205,7 +205,11 @@
         </div>
 
         <div class="row container-fluid footer-bottom mt-4 mx-0">
-            <div class="col-12 col-md-4">Customer Service</div>
+            <div class="col-12 col-md-4">
+                <h4 class="text-left uppercase">Customer Support</h4>
+                <a href="{% url 'contact' %}">Contact</a>
+
+            </div>
             <div class="col-12 col-md-4">Company
             </div>
             <div class="col-12 col-md-4">Contact Us</div>
