Changed buttons across site, worked on layout for index.html, changed contact message field to textfield

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -133,7 +133,7 @@
             {% else %}
             <!-- SHOPPING BAG EMPTY -->
                 <p class="lead mb-5">Your bag is empty.</p>
-                <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">
+                <a href="{% url 'products' %}" class="shop-now-button btn btn-md rounded-0 text-uppercase">
                     <span class="icon">
                         <i class="fas fa-chevron-left"></i>
                     </span>
