--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="success-continer container mt-5 pt-5">
+    <div class="success-continer container">
         <div class="row">
             <div class="col">
                 <hr>
@@ -178,14 +178,14 @@
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
                 {% if from_profile %}
-                    <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                    <a href="{% url 'profile' %}" class="shop-now-button btn btn-md rounded-0 text-uppercase">
                         <span class="icon mr-2">
                             <i class="fas fa-angle-left"></i>
                         </span>
                         <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% else %}
-				    <a href="{% url 'products' %}" class="btn btn-black rounded-0 my-2">
+				    <a href="{% url 'products' %}" class="shop-now-button btn btn-md rounded-0 text-uppercase">
 	    				<span class="icon mr-2">
 	    					<i class="fas fa-gifts"></i>
 	    				</span>
